# ethers-ccip-read

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: offchain.rs
src/: ccip.rs  errors.rs  lib.rs  middleware.rs  utils.rs
