[package]
name = "ethers-ccip-read"
version = "0.1.0"
authors = ["Muhamed Tanrikulu <muhammed@ens.domains>"]
license = "MIT"
edition = "2018"
readme = "./README.md"
documentation = "https://docs.rs/ethers-ccip-read"
repository = "https://github.com/ensdomains/ethers-ccip-read"
homepage = "https://github.com/ensdomains/ethers-ccip-read"
keywords = ["ens", "ethers", "ccip-read", "offchain-resolver", "l2-resolver"]
description = """
CCIP-Read middleware for ethers-rs
"""
exclude = [
    ".github",
    "examples"
]

[dependencies]
# Error handling
thiserror = { version = "1.0.26", default-features = false }

# Serialization/deserialization
serde_json = "1"

# HTTP
reqwest = "0.11"

# Async
async-recursion = "1.0.4"
async-trait = { version = "0.1.50", default-features = false }

# Ethers
ethers-core = "2.0.4"
ethers-providers = "2.0.4"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
ethers = "2.0.4"
anyhow = "1.0"
