[package]
name = "ethers-ccip-read"
version = "0.1.1"
authors = ["Muhamed Tanrikulu <muhammed@ens.domains>"]
license = "MIT"
edition = "2018"
readme = "./README.md"
documentation = "https://docs.rs/ethers-ccip-read"
repository = "https://github.com/ensdomains/ethers-ccip-read"
homepage = "https://github.com/ensdomains/ethers-ccip-read"
keywords = ["ens", "ethers", "ccip-read", "offchain-resolver", "l2-resolver"]
description = """
CCIP-Read middleware for ethers-rs
"""
exclude = [
    ".github",
    "examples"
]

[dependencies]
# Tracing
tracing = "0.1.40"

# Error handling
thiserror = { version = "1.0.50", default-features = false }

# Serialization/deserialization
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }

# HTTP
reqwest = "0.11.22"

# Async
async-recursion = "1.0.5"
async-trait = { version = "0.1.74", default-features = false }

# Ethers
ethers-core = "2.0.11"
ethers-providers = "2.0.11"
futures-util = "0.3.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
ethers = "2.0.11"
anyhow = "1.0.75"
